--- a/guliMall/guli-gateway/src/main/resources/bootstrap.properties
+++ b/guliMall/guli-gateway/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
-spring.cloud.nacos.config.server-addr=127.0.0.1:8848
-spring.cloud.nacos.config.namespace=ca3efd75-7223-4e76-b3be-f318c6c8c1ba
-spring.application.name=guli-gateway
-server.port=88
+#spring.cloud.nacos.config.server-addr=127.0.0.1:8848
+#spring.cloud.nacos.config.namespace=ca3efd75-7223-4e76-b3be-f318c6c8c1ba
+#spring.application.name=guli-gateway
+#server.port=88
