--- a/guliMall/renren-generator-master/pom.xml
+++ b/guliMall/renren-generator-master/pom.xml
@@ -18,7 +18,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<mybatisplus.version>3.3.1</mybatisplus.version>
+		<mybatisplus.version>3.3.1</mybatisplus.version>dmi
 		<druid.version>1.1.13</druid.version>
 		<commons.lang.version>2.6</commons.lang.version>
 		<commons.io.version>2.5</commons.io.version>
