--- a/guliMall/guli-product/src/main/resources/application.yml
+++ b/guliMall/guli-product/src/main/resources/application.yml
@@ -4,10 +4,19 @@ spring:
     password: root
     url: jdbc:mysql://192.168.115.131:3306/gulimall_pms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.jdbc.Driver
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+  application:
+    name: gulimall-product
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
   global-config:
     db-config:
       id-type: auto
+      logic-delete-value: 1
+      logic-not-delete-value: 0
 server:
   port: 10000
+
