--- a/guliMall/guli-common/pom.xml
+++ b/guliMall/guli-common/pom.xml
@@ -101,6 +101,11 @@
             <artifactId>jetty-util</artifactId>
             <version>9.3.7.v20160115</version>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
 
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
