--- a/guliMall/guli-member/src/main/resources/application.yml
+++ b/guliMall/guli-member/src/main/resources/application.yml
@@ -2,8 +2,14 @@ spring:
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://192.168.115.131:3306/gulimall_ums?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/gulimall_ums?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.jdbc.Driver
+  application:
+    name: gulimall-member
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
   global-config:
