--- a/guliMall/guli-product/src/main/resources/application.yml
+++ b/guliMall/guli-product/src/main/resources/application.yml
@@ -15,6 +15,8 @@ spring:
         endpoint: oss-cn-guangzhou.aliyuncs.com
   application:
     name: gulimall-product
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
   global-config:
@@ -24,5 +26,6 @@ mybatis-plus:
       logic-not-delete-value: 0
 server:
   port: 10000
+
 
 
