--- a/guliMall/guli-gateway/src/main/resources/application.yml
+++ b/guliMall/guli-gateway/src/main/resources/application.yml
@@ -26,6 +26,13 @@ spring:
           filters:
             - RewritePath=/api/(?<segment>/?.*),/$\{segment}
 
+        - id: ware_route
+          uri: lb://guli-ware
+          predicates:
+            - Path=/api/ware/**
+          filters:
+            - RewritePath=/api/(?<segment>/?.*),/$\{segment}
+
         - id: member_route
           uri: lb://gulimall-member
           predicates:
