--- a/guliMall/guli-ware/src/main/resources/application.yml
+++ b/guliMall/guli-ware/src/main/resources/application.yml
@@ -2,8 +2,16 @@ spring:
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://192.168.115.131:3306/gulimall_ums?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/gulimall_wms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.jdbc.Driver
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+  application:
+    name: guli-ware
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
   global-config:
@@ -11,3 +19,4 @@ mybatis-plus:
       id-type: auto
 server:
   port: 11000
+
