--- a/EduProject/service/service_cms/src/main/resources/application.properties
+++ b/EduProject/service/service_cms/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.application.name=service-cms
 
 # mysql?????
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/cc?serverTimezone=GMT%2B8
-spring.datasource.username=cc
-spring.datasource.password=ccsdsg0629
+spring.datasource.url=jdbc:mysql://localhost:3306/guli?serverTimezone=GMT%2B8
+spring.datasource.username=root
+spring.datasource.password=root
 
 #??json???????
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
