--- a/EduProject/service/service_msn/src/main/resources/application.properties
+++ b/EduProject/service/service_msn/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.application.name=service-msm
 
 # mysql?????
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/cc?serverTimezone=GMT%2B8
-spring.datasource.username=cc
-spring.datasource.password=ccsdsg0629
+spring.datasource.url=jdbc:mysql://localhost:3306/guli?serverTimezone=GMT%2B8
+spring.datasource.username=root
+spring.datasource.password=root
 
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
